small changes
